# wl-mirror

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
glsl/: CMakeLists.txt  embed.c.in  embed.cmake  embed.h.in  fragment_shader.glsl  vertex_shader.glsl
include/: context.h  egl.h  event.h  log.h  mirror-backends.h  mirror-dmabuf.h  mirror-screencopy.h  mirror-xdg-portal.h  mirror.h  options.h  stream.h  transform.h  util.h  wayland.h
include/wayland/: core.h  events.h  output.h  protocols.h  registry.h  window.h
include/wlm/: context.h  egl.h  event.h  log.h  mirror-backends.h  mirror-dmabuf.h  mirror-export-dmabuf.h  mirror-extcopy.h  mirror-screencopy.h  mirror-xdg-portal.h  mirror.h  options.h  stream.h  transform.h  util.h  wayland.h
include/wlm/egl/: core.h  dmabuf.h  formats.h  render.h  shm.h
include/wlm/event/: emit.h  loop.h
include/wlm/mirror/: backends.h  export-dmabuf.h  extcopy.h  screencopy.h  target.h
include/wlm/util/: transform.h
include/wlm/wayland/: core.h  dmabuf.h  output.h  protocols.h  registry.h  seat.h  shm.h  window.h
man/: CMakeLists.txt  wl-mirror.1.scd  wl-present.1.scd
proto/: CMakeLists.txt
scripts/: release.sh  wl-mirror-ctl  wl-present
scripts/completions/bash-completions/: _wl-mirror  _wl-present
scripts/completions/zsh-completions/: _wl-mirror  _wl-present
src/: egl.c  event.c  log.c  main.c  mirror-dmabuf.c  mirror-export-dmabuf.c  mirror-extcopy.c  mirror-screencopy.c  mirror-xdg-portal.c  mirror.c  options.c  options_old.c  stream.c  transform.c  wayland.c
src/egl/: core.c  dmabuf.c  formats.c  render.c  shm.c
src/event/: emit.c  loop.c
src/mirror/: export-dmabuf.c  extcopy.c  screencopy.c  target.c
src/options/: parse.c  specs.c
src/util/: transform.c
src/wayland/: core.c  dmabuf.c  events.c  output.c  protocols.c  registry.c  seat.c  shm.c  window.c
version/: CMakeLists.txt  version.cmake  version.h.in
